@@ -70,13 +70,19 @@ val float : float -> float
 val bool : unit -> bool
 (** [Random.bool ()] returns [true] or [false] with probability 0.5 each. *)
 
-(** {6 Enumerations of random values.} *)
+(** {6 Enumerations of random values.} 
 
-val enum_int : int -> int Enum.t
+    These enumerations may be cloned without loss of performance,
+    to obtain reproducible enumerations of pseudo-random numbers.
+*)
 
-val enum_bool : unit -> bool Enum.t
+val enum_bits  : unit    -> int Enum.t
 
-val enum_float : float -> float Enum.t
+val enum_int   : int     -> int Enum.t
+
+val enum_bool  : unit    -> bool Enum.t
+
+val enum_float : float   -> float Enum.t
 
 val enum_int32 : Int32.t -> Int32.t Enum.t
 
@@ -84,7 +90,7 @@ val enum_int64 : Int64.t -> Int64.t Enum.t
 
 val enum_nativeint : Nativeint.t -> Nativeint.t Enum.t
 
-(** {6 Working on data structures.} *)
+(** {6 Working with data structures.} *)
 
 val choice : 'a Enum.t -> 'a
 (** [choice e] returns a randomly-chosen element of [e].
@@ -125,16 +131,25 @@ module State : sig
   val copy : t -> t
   (** Return a copy of the given state. *)
 
-  val bits : t -> int
-  val int : t -> int -> int
-  val int32 : t -> Int32.t -> Int32.t
+  val bits      : t -> int
+  val int       : t -> int -> int
+  val int32     : t -> Int32.t -> Int32.t
   val nativeint : t -> Nativeint.t -> Nativeint.t
-  val int64 : t -> Int64.t -> Int64.t
-  val float : t -> float -> float
-  val bool : t -> bool
+  val int64     : t -> Int64.t -> Int64.t
+  val float     : t -> float -> float
+  val bool      : t -> bool
+  val enum_bits  : t -> unit    -> int Enum.t
+  val enum_int   : t -> int     -> int Enum.t
+  val enum_bool  : t -> unit    -> bool Enum.t
+  val enum_float : t -> float   -> float Enum.t
+  val enum_int32 : t -> Int32.t -> Int32.t Enum.t
+  val enum_int64 : t -> Int64.t -> Int64.t Enum.t
+  val enum_nativeint : t -> Nativeint.t -> Nativeint.t Enum.t
+
   (** These functions are the same as the basic functions, except that they
       use (and update) the given PRNG state instead of the default one.
   *)
+
 
   (** {6 Boilerplate code}*)
   (** {7 S-Expressions}
