@@ -1,5 +1,7 @@
 2009-02-09  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/extRandom.ml*: [State.enum_*] added, [State.random_enum] added, [random_enum_with_state] renamed prandom_enum] and redefined from [State.random_enum]
+
 	* src/core/extlib/extBigarray.ml: flattened
 
 	* src/core/extlib/extBigarray.ml: [enum] rewritten
